--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "cors": "^2.8.5",
     "customize-cra": "^1.0.0",
     "dayjs": "^1.8.21",
+    "docxtemplater": "^3.31.3",
+    "file-saver": "^2.0.5",
     "highcharts": "^9.2.2",
     "highcharts-more": "^0.1.7",
     "highcharts-react-official": "^3.0.0",
+    "jszip-utils": "^0.1.0",
     "jwt-decode": "^2.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
     "mysql": "^2.17.1",
+    "pizzip": "^3.1.3",
     "react": "^16.11.0",
     "react-app-rewired": "^2.1.4",
     "react-dom": "^16.11.0",
